Closed Bug 1730738 Opened 3 years ago Closed 3 years ago

BCC header missing in "Sent" message, when message is sent using outbox

Categories

(Thunderbird :: Mail Window Front End, defect)

defect

Tracking

(thunderbird_esr91+ fixed, thunderbird93+ fixed)

RESOLVED FIXED
94 Branch
Tracking Status
thunderbird_esr91 + fixed
thunderbird93 + fixed

People

(Reporter: jon, Assigned: rnons)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:92.0) Gecko/20100101 Firefox/92.0

Steps to reproduce:

Compose a message with BCC recipients, and send it using the outbox mechanism (Ci.nsIMsgCompDeliverMode.Later)

Actual results:

The message is deposited into the outbox with all headers intact, and File > Send Unsent Messages delivers it to all the correct recipients. However, the copy that ends up in the "Sent" folder has the BCC addresses stripped. According to this user, the behavior changed between version 78 and 91.

Expected results:

The message copy deposited in "Sent" is intended to be a record of what the user has done in the past, and it is important for the original headers to remain intact. It is especially important for verifying to whom the message was delivered.

Blocks: tb91found
Component: Untriaged → Mail Window Front End
Flags: needinfo?(remotenonsense)

I guess it's regressed by bug 1686636, the bcc line in the message file got removed by SendLater.cpp. Will take a look.

Assignee: nobody → remotenonsense
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Flags: needinfo?(remotenonsense)
Regressed by: 1686636

nsMsgSendLater.cpp removes bcc header, needs to add it back in MessageSend.jsm.

See Also: → 1730829
Attachment #9241278 - Attachment description: Bug 1730738 - Fix bcc header in fcc when sending from Outbox. r=mkmelin → Bug 1730738 - No need to remove bcc header in nsMsgSendLater.cpp. r=mkmelin
Attachment #9241278 - Attachment description: Bug 1730738 - No need to remove bcc header in nsMsgSendLater.cpp. r=mkmelin → Bug 1730738 - Fix bcc header in fcc when sending from Outbox. r=mkmelin

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/dee54b61b220
Fix bcc header in fcc when sending from Outbox. r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED

This is a dataloss bug which should be uplifted asap.

Flags: needinfo?(remotenonsense)

Comment on attachment 9241278 [details]
Bug 1730738 - Fix bcc header in fcc when sending from Outbox. r=mkmelin

[Approval Request Comment]
Regression caused by (bug #): bug 1686636
User impact if declined: After sending a bcc mail from Outbox, the bcc header is missing in the Sent folder
Testing completed (on c-c, etc.): c-c
Risk to taking this patch (and alternatives if risky): low

Flags: needinfo?(remotenonsense)
Attachment #9241278 - Flags: approval-comm-esr91?
Attachment #9241278 - Flags: approval-comm-beta?
Target Milestone: --- → 94 Branch

Comment on attachment 9241278 [details]
Bug 1730738 - Fix bcc header in fcc when sending from Outbox. r=mkmelin

[Triage Comment]
Approved for beta

Attachment #9241278 - Flags: approval-comm-beta? → approval-comm-beta+

Comment on attachment 9241278 [details]
Bug 1730738 - Fix bcc header in fcc when sending from Outbox. r=mkmelin

[Triage Comment]
Approved for esr91

Attachment #9241278 - Flags: approval-comm-esr91? → approval-comm-esr91+
Regressions: 1733651
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: