mailnews/compose/test/unit/test_bcc.js
@@ -32,6 +32,7 @@ add_task(async function setup() {
  * header, but the mail saved to the Sent folder contains bcc header.
  */
 add_task(async function testBcc() {
+  gServer.resetTest();
   let identity = getSmtpIdentity(
     "from@tinderbox.invalid",
     getBasicSmtpServer(gServer.port)
@@ -98,6 +99,7 @@ add_task(async function testBcc() {
  * Test that non-utf8 eml attachment is intact after sent to a bcc recipient.
  */
 add_task(async function testBccWithNonUtf8EmlAttachment() {
+  gServer.resetTest();
   let identity = getSmtpIdentity(
     "from@tinderbox.invalid",
     getBasicSmtpServer(gServer.port)
@@ -153,4 +155,84 @@ add_task(async function testBccWithNonUtf8EmlAttachment() {
   );
   // \x8C\xBB\x8B\xB5 is 現況 in SHIFT-JIS.
   Assert.ok(gServer._daemon.post.includes("\r\n\r\n\x8C\xBB\x8B\xB5\r\n"));
+});
+
+add_task(async function testBccWithSendLater() {
+  gServer.resetTest();
+  let identity = getSmtpIdentity(
+    "from@tinderbox.invalid",
+    getBasicSmtpServer(gServer.port)
+  );
+  let account = MailServices.accounts.createAccount();
+  account.addIdentity(identity);
+
+  // Prepare the comp fields, including the bcc field.
+  let fields = Cc[
+    "@mozilla.org/messengercompose/composefields;1"
+  ].createInstance(Ci.nsIMsgCompFields);
+  fields.to = "Nobody <to@tinderbox.invalid>";
+  fields.subject = "Test bcc";
+  fields.bcc = "bcc@tinderbox.invalid";
+  fields.body = "A\r\nBcc: \r\n mail body\r\n.";
+
+  let params = Cc[
+    "@mozilla.org/messengercompose/composeparams;1"
+  ].createInstance(Ci.nsIMsgComposeParams);
+  params.composeFields = fields;
+
+  // Queue the mail to send later.
+  let msgCompose = MailServices.compose.initCompose(params);
+  msgCompose.type = Ci.nsIMsgCompType.New;
+  let progress = Cc["@mozilla.org/messenger/progress;1"].createInstance(
+    Ci.nsIMsgProgress
+  );
+  let promise = new Promise((resolve, reject) => {
+    progressListener.resolve = resolve;
+    progressListener.reject = reject;
+  });
+  progress.registerListener(progressListener);
+  msgCompose.sendMsg(
+    Ci.nsIMsgSend.nsMsgQueueForLater,
+    identity,
+    "",
+    null,
+    progress
+  );
+  await promise;
+
+  let msgSendLater = Cc["@mozilla.org/messengercompose/sendlater;1"].getService(
+    Ci.nsIMsgSendLater
+  );
+  msgSendLater.addListener({
+    onStartSending() {},
+    onMessageStartSending() {},
+    onMessageSendProgress() {},
+    onMessageSendError() {},
+    onStopSending() {
+      let expectedBody = `\r\n\r\n${fields.body}`;
+      // Should not contain extra \r\n between head and body.
+      let notExpectedBody = `\r\n\r\n\r\n${fields.body}`;
+
+      Assert.ok(gServer._daemon.post.includes("Subject: Test bcc"));
+      // Check that bcc header doesn't exist in the sent mail.
+      Assert.ok(!gServer._daemon.post.includes("Bcc: bcc@tinderbox.invalid"));
+      Assert.ok(gServer._daemon.post.includes(expectedBody));
+      Assert.ok(!gServer._daemon.post.includes(notExpectedBody));
+
+      let msgData = mailTestUtils.loadMessageToString(
+        gSentFolder,
+        mailTestUtils.getMsgHdrN(gSentFolder, 0)
+      );
+      Assert.ok(msgData.includes("Subject: Test bcc"));
+      // Check that bcc header exists in the mail copy.
+      Assert.ok(msgData.includes("Bcc: bcc@tinderbox.invalid"));
+      Assert.ok(msgData.includes(fields.body));
+      Assert.ok(msgData.includes(expectedBody));
+      Assert.ok(!msgData.includes(notExpectedBody));
+    },
+  });
+
+  // Actually send the message.
+  msgSendLater.sendUnsentMessages(identity);
+  gServer.performTest();
 });
